<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable"
    tools:context=".signup">

    <ImageView
        android:id="@+id/logo1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/img"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/nirk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo1"
        android:layout_marginTop="20dp"
        android:text="@string/nirakshak2"
        android:textColor="@color/black"
        android:textSize="37sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/signuptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@+id/nirk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:textSize="30sp"
        android:textStyle="bold"
        />
     <EditText
         android:id="@+id/email1"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:hint="@string/email"
         android:layout_below="@+id/signuptext"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:textSize="20sp"
         android:layout_marginTop="24dp"
         android:textColorHint="#2B2A2A"
         android:inputType="textEmailAddress"
         />
    <EditText
        android:id="@+id/phnNum"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_below="@+id/email1"
        android:textColorHint="#2B2A2A"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/createpwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/create_password"
        android:layout_below="@+id/phnNum"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="#2B2A2A"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/confirmpwd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/createpwd"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="17dp"
        android:layout_centerHorizontal="true"
        android:textColorHint="#2B2A2A"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/createAccnt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_below="@+id/confirmpwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:backgroundTint="#9249CC"
        />

</RelativeLayout>