<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@drawable/gradient_drawable"
    tools:context=".login">

<ImageView
    android:id="@+id/logo1"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/img"
    android:layout_centerHorizontal="true"
    />

    <TextView
        android:id="@+id/nirk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo1"
        android:layout_marginTop="37dp"
        android:text="@string/nirakshak2"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/eamil"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nirk"
        android:layout_marginTop="50dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textColorHint="#2B2A2A"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@+id/eamil"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textColorHint="#2B2A2A"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/pass"
        android:layout_marginTop="42dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#9249CC"
        />
    <TextView
        android:id="@+id/signupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_signup"
        android:layout_below="@+id/loginbtn"
        android:layout_centerHorizontal="true"
        android:textSize="17dp"
        android:textColor="#2B377A"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>